Fix #440, Fix #433: Skill book now shows properly, Land trigger improved
Other code cleanup as well